Ajout possibilité de tri lors de la répartition